# langgraph-study

./: .gitignore  2.2 간단한 Retrieval 에이전트 (feat. PDF 전처리 꿀팁).ipynb  2.3 공식문서 따라하면 실패하는 Agentic RAG.ipynb  2.4 생성된 답변을 여러번 검증하는 Self-RAG.ipynb  2.5 웹 검색을 지원하는 Corrective RAG.ipynb  2.6 SubGraph_LangGraph Agent를 Node로 활용하는 방법.ipynb  2.7 병렬 처리를 통한 효율 개선 (feat. 프롬프트 엔지니어링).ipynb  2.8 Multi-Agent 시스템과 RouteLLM.ipynb  3.2 LangChain에서 도구(tool) 활용 방법.ipynb  3.3 LangGraph에서 도구(tool) 활용 방법.ipynb  3.4 LangGraph 내장 도구(tool)를 활용해서 만드는 Agent.ipynb  3.5 Agent의 히스토리를 관리하는 방법.ipynb  income_tax_graph.py  pyproject.toml  real_estate_tax_graph.py
