[project]
name = "langgraph-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.26",
    "langchain-openai>=0.3.27",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.5.0",
    "pypdf>=5.7.0",
    "python-dotenv>=1.1.1",
]
